Determinar layouts diferentes com Grid

--- a/Bootstrap/CursoV-Unidade03Grid.html
+++ b/Bootstrap/CursoV-Unidade03Grid.html
@@ -12,42 +12,61 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
-
 <body>
+    <main>
+        <header>
+            <nav></nav>
+        </header>
 
-<!--Digite abaixo seu codigo-->
+         <div class="container mw-100">
+             <div class="row">
 
-<div class="jumbotron text-center">
-    <h1>My First Bootstrap Page</h1>
-    <p>Resize this responsive page to see the effect!</p>
-</div>
+                <div class="col-sm-6 col-md-4 col-lg-3  col-xl-2" id="facebook">
+                    <img class="icones"  src="../HTML/imagens/facebook_fb_logo_icon_181508.png" alt="logo facebook">
+                    <h1>Logo Corporativo</h1>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                </div>
 
-<div class="container-fluid">
+                <div class=" col-sm-6 col-md-4 col-lg-3 col-xl-2" id="instagram">
+                    <img class="icones" src="../HTML/imagens/instagram_ig_logo_icon_181500.png" alt="logo instagram">
+                    <h1>Logo Corporativo</h1>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                </div>
 
-    <div class="row"> <!--row para ficar uma ao lado do outro, para naoquebrar a grid-->
+                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="skype">
+                    <img class="icones" src="../HTML/imagens/skype_logo_icon_181503.png" alt="logo skype" >
+                    <h1>Logo Corporativo</h1>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                </div>
 
-    <div class="col-sm-4"> <!--o grid e dividido em 12 colunas voce precisa dividir essa conta com as outras colunas-->
-        <h1>Titulo da minha pagina</h1>
-        <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
-        when the animation is 100% complete:</p>
+                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="twitter">
+                    <img class="icones" src="../HTML/imagens/twitter_logo_icon_181501.png" alt="logo twitter">
+                    <h1>Logo Corporativo</h1>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="whatsapp">
+                    <img class="icones" src="../HTML/imagens/whatsapp_logo_icon_181506.png" alt="logo whatsapp">
+                    <h1>Logo Corporativo</h1>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="youtube">
+                    <img class="icones" src="../HTML/imagens/youtube_logo_icon_181507.png" alt="logo youtube">
+                    <h1>Logo Corporativo</h1>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                </div>
+             </div>
     </div>
 
-    <div class="col-sm-4">
-        <h1>Titulo da minha pagina</h1>
-        <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
-            when the animation is 100% complete:</p>
-    </div>
 
-        <div class="col-sm-4">
-            <h1>Titulo da minha pagina</h1>
-            <p>Note: The animation-duration property defines how long time an animation should take to complete. If the animation-duration property is not specified, no animation will occur, because the default value is 0s (0 seconds).
-                when the animation is 100% complete:</p>
-        </div>
-</div>
 
-</div>
 
-<!--Fim do seu codigo-->
 
+        <section></section>
+        <article></article>
+        <aside></aside>
+        <footer></footer>
+    </main>
 </body>
 </html>
