--- a/Bootstrap/CursoV-Unidade03Grid.html
+++ b/Bootstrap/CursoV-Unidade03Grid.html
@@ -21,10 +21,13 @@
          <div class="container mw-100">
              <div class="row">
 
-                <div class="col-sm-6 col-md-4 col-lg-3  col-xl-2" id="facebook">
+                 <div class="clearfix visible-sm-block"></div><!--para corrigir o problema dos demis itens cairem por conta do tamanho do item acima, essa funcao e usada acima do item problematico-->
+
+             <div class="col-sm-6 col-md-4 col-lg-3  col-xl-2" id="facebook">
                     <img class="icones"  src="../HTML/imagens/facebook_fb_logo_icon_181508.png" alt="logo facebook">
                     <h1>Logo Corporativo</h1>
-                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
+                    <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.
+                        Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
 
                 <div class=" col-sm-6 col-md-4 col-lg-3 col-xl-2" id="instagram">
