--- a/Bootstrap/CursoV-Unidade03Grid.html
+++ b/Bootstrap/CursoV-Unidade03Grid.html
@@ -19,46 +19,49 @@
         </header>
 
          <div class="container mw-100">
-             <div class="row">
+             <div class="row"> <!--linha-->
 
                  <div class="clearfix visible-sm-block"></div><!--para corrigir o problema dos demis itens cairem por conta do tamanho do item acima, essa funcao e usada acima do item problematico-->
-
-             <div class="col-sm-6 col-md-4 col-lg-3  col-xl-2" id="facebook">
+                 <div class="col-sm-6 col-md-4 col-lg-4  col-xl-2" id="facebook">
                     <img class="icones"  src="../HTML/imagens/facebook_fb_logo_icon_181508.png" alt="logo facebook">
                     <h1>Logo Corporativo</h1>
                     <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.
                         Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
-
-                <div class=" col-sm-6 col-md-4 col-lg-3 col-xl-2" id="instagram">
+                 <div class=" col-sm-6 col-md-4 col-lg-4 col-xl-2" id="instagram">
                     <img class="icones" src="../HTML/imagens/instagram_ig_logo_icon_181500.png" alt="logo instagram">
                     <h1>Logo Corporativo</h1>
                     <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
-
-                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="skype">
+                 <div class="col-sm-6 col-md-4 col-lg-4 col-xl-2" id="skype">
                     <img class="icones" src="../HTML/imagens/skype_logo_icon_181503.png" alt="logo skype" >
                     <h1>Logo Corporativo</h1>
                     <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
-
-                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="twitter">
+                 <div class="col-sm-6 col-md-4 col-xl-2" id="twitter">
                     <img class="icones" src="../HTML/imagens/twitter_logo_icon_181501.png" alt="logo twitter">
                     <h1>Logo Corporativo</h1>
                     <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
-
-                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="whatsapp">
+                 <div class="col-sm-6 col-md-4 col-lg-4 col-xl-2" id="whatsapp">
                     <img class="icones" src="../HTML/imagens/whatsapp_logo_icon_181506.png" alt="logo whatsapp">
                     <h1>Logo Corporativo</h1>
                     <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
-
-                <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2" id="youtube">
+                 <div class="col-sm-6 col-md-4 col-lg-4 col-xl-2" id="youtube">
                     <img class="icones" src="../HTML/imagens/youtube_logo_icon_181507.png" alt="logo youtube">
                     <h1>Logo Corporativo</h1>
                     <p>Seus logos com jeito 100% profissional, confira todas nossas ofertas e aproveite.</p>
                 </div>
+
+             </div>
+
+             <div class="row">
+                 <div class="exemplolinha2 red  col-sm-12 col-md-6"></div>
+                 <div class="exemplolinha2 green    col-sm-12 col-md-6"></div>
+                 <div class="exemplolinha2 blue col-sm-12 col-md-6"></div>
+                 <div class="exemplolinha2 yellow   col-sm-12 col-md-6"></div>
+
              </div>
     </div>
 
