--- a/Bootstrap/Unidade04-BootstrapCSSClasses.html
+++ b/Bootstrap/Unidade04-BootstrapCSSClasses.html
@@ -19,27 +19,41 @@
     <section></section>
     <article>
         <div class="container">
-            <div class="row">
-                <h1>Titulo minha pagina</h1>
-                <p class="text-right">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
-                </p>
 
-                <p class="text-justify">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
-                </p>
+            <h1>Lista Nao Ordenada</h1>
+            <ul class="list-inline">
+                <li class="list-inline-item">Brasil</li>
+                <li class="list-inline-item">Portugal</li>
+                <li class="list-inline-item">Crocia</li>
+            </ul>
 
-                <p class="text-right">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
-                </p>
+            <h1>Lista Ordenada</h1>
+            <ol class="list-unstyled">
+                <li>Brasil</li>
+                <li>Portugal</li>
+                <li>Crocia</li>
+            </ol>
 
-                <p class="text-center">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
-                </p>
+                <h1>Lista de Definicao</h1>
+                <br>
+            <dl class="row">
+            <dt class="col-sm-3 text-right">Curso HTML</dt>
+                <dd class="col-sm-9 text-left">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
+                </dd>
 
-                <p class="text-left">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
-                </p>
+            <dt class="col-sm-3 text-right" >Curso CSS</dt>
+                <dd class="col-sm-9 text-left">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
+                </dd>
 
-                <p class="text-danger">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
-                </p>
+            <dt class="col-sm-3 text-right">Curso Javascript</dt>
+                <dd class="col-sm-9 text-left">Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
+                </dd>
+
+            <dt class="col-sm-3 text-right">Curso Bootstrap</dt>
+                <dd class="col-sm-9 text-left"> Navbar navigation links build on our .nav options with their own modifier class and require the use of toggler classes for proper responsive styling. Navigation in navbars will also grow to occupy as much horizontal space as possible to keep your navbar contents securely aligned.
+                </dd>
+            </dl>
             </div>
-        </div>
     </article>
     <aside></aside>
     <footer></footer>
