Alterando o tamanho dos botões

--- a/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
+++ b/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
@@ -19,7 +19,7 @@
 
     <div class="container">
         <h2>Estilos</h2>
-        <button class="btn btn-outline-primary">Principal</button>
+        <button class="btn btn-primary">Principal</button>
         <button class="btn btn-secondary">Secundario</button>
         <button class="btn btn-success">Sucesso</button>
         <button class="btn btn-info">Informacao</button>
@@ -27,11 +27,9 @@
         <button class="btn btn-danger">Perigo</button>
 
         <h2>Tamanho</h2>
-        <button >Padrao</button>
-        <button>Largo</button>
-        <button>Pequeno</button>
-        <button>Muito pequeno</button>
-        <button>block</button>
+        <button class="btn btn-primary btn-lg">Largo</button>
+        <button class="btn btn-primary btn-sm">Pequeno</button>
+        <button class="btn btn-secondary btn-block">block</button>
 
         <h2>Extras</h2>
         <button>ativo</button>
