--- a/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
+++ b/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
@@ -32,8 +32,8 @@
         <button class="btn btn-secondary btn-block">block</button>
 
         <h2>Extras</h2>
-        <button>ativo</button>
-        <button>nao ativo</button>
+        <button class="btn btn-primary">ativo</button>
+        <button class="btn btn-primary disabled">nao ativo</button>
     </div>
 
     <section></section>
