Aplicando estilos em imagens

--- a/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
+++ b/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Unidade 4</title>
-    <link rel="stylesheet" href="estilos/estilo02.css">
-    <link href="myJqueryScripts/Jquery02.js">
+    <link rel="stylesheet" href="estilos/estilo03.css">
+    <link href="myJqueryScripts/Jquery03.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -18,22 +18,13 @@
     </header>
 
     <div class="container">
-        <h2>Estilos</h2>
-        <button class="btn btn-primary">Principal</button>
-        <button class="btn btn-secondary">Secundario</button>
-        <button class="btn btn-success">Sucesso</button>
-        <button class="btn btn-info">Informacao</button>
-        <button class="btn btn-warning">Aviso</button>
-        <button class="btn btn-danger">Perigo</button>
+        <h1>Imagens</h1>
+        <div id="imagem1" class="rounded"></div>
+        <div id="imagem2" class="rounded-circle"></div>
+        <div id="imagem3" class="img-thumbnail"></div>
 
-        <h2>Tamanho</h2>
-        <button class="btn btn-primary btn-lg">Largo</button>
-        <button class="btn btn-primary btn-sm">Pequeno</button>
-        <button class="btn btn-secondary btn-block">block</button>
-
-        <h2>Extras</h2>
-        <button class="btn btn-primary">ativo</button>
-        <button class="btn btn-primary disabled">nao ativo</button>
+        <h1 class="img-fluid imga">Foto responsiva</h1> <!--es ajusta com o elemento pai-->
+        <img class="imga" src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
     </div>
 
     <section></section>
