Aplicando estilos em textos

--- a/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
+++ b/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
@@ -18,13 +18,23 @@
     </header>
 
     <div class="container">
-        <h1>Imagens</h1>
-        <div id="imagem1" class="rounded"></div>
-        <div id="imagem2" class="rounded-circle"></div>
-        <div id="imagem3" class="img-thumbnail"></div>
 
-        <h1 class="img-fluid imga">Foto responsiva</h1> <!--es ajusta com o elemento pai-->
-        <img class="imga" src="../HTML/imagens/terremoto-causou-estragos-e-deixou-feridos-e-desabrigados.webp">
+        <h2>Texto</h2>
+        <p class="text-primary">Lorem ipsum dolor sit amet.</p>
+        <p class="text-success">Saepe democritum at mel. Ad sed fugit.</p>
+        <p class="text-info">Primis vocibus vis id.</p>
+        <p class="text-warning">Sed ex alii discere, pri recusabo convenire.</p>
+        <p class="text-danger">Eu clita imperdiet eum.</p>
+
+        <h2>Background</h2>
+        <p class="bg-primary">Lorem ipsum dolor sit amet.</p>
+        <p class="bg-secondary">Saepe democritum at mel. Ad sed fugit.</p>
+        <p class="bg-success">Primis vocibus vis id.</p>
+        <p class="bg-info">Sed ex alii discere, pri recusabo convenire.</p>
+        <p class="bg-warning">Eu clita imperdiet eum.</p>
+        <p class="bg-danger">Eu clita imperdiet eum.</p>
+
+
     </div>
 
     <section></section>
