Aplicando estilos em tabelas

--- a/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
+++ b/Bootstrap/Unidade05-BootstrapBotões,Vídeos,Imagens,TextoseTabelas.html
@@ -18,23 +18,55 @@
     </header>
 
     <div class="container">
-
-        <h2>Texto</h2>
-        <p class="text-primary">Lorem ipsum dolor sit amet.</p>
-        <p class="text-success">Saepe democritum at mel. Ad sed fugit.</p>
-        <p class="text-info">Primis vocibus vis id.</p>
-        <p class="text-warning">Sed ex alii discere, pri recusabo convenire.</p>
-        <p class="text-danger">Eu clita imperdiet eum.</p>
-
-        <h2>Background</h2>
-        <p class="bg-primary">Lorem ipsum dolor sit amet.</p>
-        <p class="bg-secondary">Saepe democritum at mel. Ad sed fugit.</p>
-        <p class="bg-success">Primis vocibus vis id.</p>
-        <p class="bg-info">Sed ex alii discere, pri recusabo convenire.</p>
-        <p class="bg-warning">Eu clita imperdiet eum.</p>
-        <p class="bg-danger">Eu clita imperdiet eum.</p>
-
-
+        <h1>Olimpiadas do Rio de Janeiro 2016</h1>
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
+            <tr class="table-success">
+                <td></td>
+                <td>Ouro</td>
+                <td>Prata</td>
+                <td>Bronze</td>
+                <td>Total</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="table-danger">
+                <td>Brasil</td>
+                <td>100</td>
+                <td>130</td>
+                <td>200</td>
+                <td>430</td>
+            </tr>
+            <tr>
+                <td>USA</td>
+                <td>90</td>
+                <td class="table-warning">110</td>
+                <td>210</td>
+                <td>420</td>
+            </tr>
+            <tr>
+                <td>China</td>
+                <td>89</td>
+                <td>100</td>
+                <td>100</td>
+                <td>289</td>
+            </tr>
+            <tr>
+                <td>Inglaterra</td>
+                <td>89</td>
+                <td>100</td>
+                <td>100</td>
+                <td>289</td>
+            </tr>
+            <tr>
+                <td>Franca</td>
+                <td>89</td>
+                <td>100</td>
+                <td>100</td>
+                <td>289</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 
     <section></section>
