--- a/Bootstrap/Unidade06-BootstrapFormulários.html
+++ b/Bootstrap/Unidade06-BootstrapFormulários.html
@@ -16,29 +16,38 @@
     <header>
         <nav></nav>
     </header>
-    <div class="container-fluid">
-    <form>
-        <div class="form-inline">
+    <div class="container">
+        <form class="form-inline">
             <div class="form-group">
-                <label for="nome" class="sr-only">Nome</label>
-                <input class="form-control" type="text" id="nome" placeholder="Seu nome">
+                <label class="col-sm-2" for="nome">Nome</label>
+                    <div class="col-sm-10">
+                    <input class="form-control" type="text" id="nome" placeholder="Seu nome">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="email" class="col-sm-2">Email</label>
+                <div class="col-sm-10">
+                <input class="form-control"  type="email" id="email" placeholder="Seu email">
+                </div>
             </div>
 
             <div class="form-group">
-                <label for="email"  class="sr-only">Email</label>
-                <input class="form-control"  type="email" id="email" placeholder="seu email">
+                <div class="form-check">
+                    <div class="col-sm-10 offset-sm-2">
+                        <label for="lista"  class="form-check-label">
+                            <input type="checkbox" id="lista" class="form-check-input">Inscrever-me na newsletter
+                        </label>
+                 </div>
+                </div>
             </div>
 
-            <div class="form-group form-check">
-                <label class="form-check-label" for="lista">
-                    <input  type="checkbox" id="lista" class="form-check-input">Inscrever-me na newsletter
-                </label>
+            <div class="form-group">
+                <div class="col-sm-10 offset-sm-2">
+            <button class="btn btn-primary "  type="submit"  >Cadastrar-me</button>
+                </div>
             </div>
-        <button class="btn btn-primary" type="submit" >Cadastrar-me</button>
-        </div>
-    </form>
+        </form>
     </div>
-
     <section></section>
     <article></article>
     <aside></aside>
