--- a/Bootstrap/projetoTeste/PageHome.html
+++ b/Bootstrap/projetoTeste/PageHome.html
@@ -18,7 +18,7 @@
 <main>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Empresa</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -69,8 +69,6 @@
         </div>
         </div>
     </div>
-
-
     <section class="containerPromo mw-100" >
         <section class="titleSection">
             <h1>Combos com ultravelocidade, diversão e entretenimento</h1>
@@ -217,8 +215,6 @@
             </div>
         </div>
     </section>
-
-
     <div class="container containerBannerContato mw-100">
                     <div class="row">
                         <div class="bannerContato">
@@ -235,8 +231,6 @@
                         </div>
                     </div>
                 </div>
-
-
     <section class="containerPromoAvatar mw-100" >
         <section class="titleSection">
             <h1>Internet para você, para sua Empresa ou para o seu Condomínio</h1>
@@ -314,7 +308,6 @@
             </div>
         </div>
     </section>
-
 
     <section></section>
     <article></article>
