--- a/Bootstrap/Unidade06-BootstrapFormulários.html
+++ b/Bootstrap/Unidade06-BootstrapFormulários.html
@@ -1,53 +1,14 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang>
 <head>
     <meta charset="UTF-8">
-    <title>Unidade 4</title>
-    <link rel="stylesheet" href="estilos/estilo04.css">
-    <link href="myJqueryScripts/Jquery04.js">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <title>test</title>
 </head>
 <body>
 <main>
     <header>
         <nav></nav>
     </header>
-    <div class="container">
-        <form class="form-inline">
-            <div class="form-group">
-                <label class="col-sm-2" for="nome">Nome</label>
-                    <div class="col-sm-10">
-                    <input class="form-control" type="text" id="nome" placeholder="Seu nome">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="email" class="col-sm-2">Email</label>
-                <div class="col-sm-10">
-                <input class="form-control"  type="email" id="email" placeholder="Seu email">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="form-check">
-                    <div class="col-sm-10 offset-sm-2">
-                        <label for="lista"  class="form-check-label">
-                            <input type="checkbox" id="lista" class="form-check-input">Inscrever-me na newsletter
-                        </label>
-                 </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-sm-10 offset-sm-2">
-            <button class="btn btn-primary "  type="submit"  >Cadastrar-me</button>
-                </div>
-            </div>
-        </form>
-    </div>
     <section></section>
     <article></article>
     <aside></aside>
