--- a/ECMAScript/Unidade04-ComeçandoaprogramaremES6.html
+++ b/ECMAScript/Unidade04-ComeçandoaprogramaremES6.html
@@ -18,13 +18,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.min.js"></script>
         <script type="text/babel">
 
-          const NASCIMENTO = 1997;
+          var nome = "Anderson"
 
-          function calcularIdade(anoAtual){
-            return anoAtual-NASCIMENTO;
-          }
-
-          alert(calcularIdade(2021))
+          alert(`Bom dia ${nome}, tudo bem?`)
 
         </script>
 </head>
