--- a/ECMAScript/Unidade04-ComeçandoaprogramaremES6.html
+++ b/ECMAScript/Unidade04-ComeçandoaprogramaremES6.html
@@ -18,9 +18,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.min.js"></script>
         <script type="text/babel">
 
-          var nome = "Anderson"
+          var citricas = ["laranja","tangirina","limao"];
+          var rosacea = ["pera","maca"];
+          var salada = ["banana","uva",...citricas,"abacate",...rosacea]; //...(array) coloca um array dentro de outro na sequncia
 
-          alert(`Bom dia ${nome}, tudo bem?`)
+          alert(salada)
 
         </script>
 </head>
