--- a/ECMAScript/Unidade05-FunçõeseObjetos.html
+++ b/ECMAScript/Unidade05-FunçõeseObjetos.html
@@ -18,19 +18,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.min.js"></script>
         <script type="text/babel">
 
-            var estatisticas = {
-                gols(qtd){
-                    alert("gol ".repeat(qtd))
-                },
+           var minhaSlada = (frutas) => alert(frutas) //arrow function substitui a escrita da funcao ex: function tal(fruta){}...
 
-                desarmes(qtd){
-                    alert("desarmes ".repeat(qtd))
-                }
-            }
 
-            estatisticas.gols(3);
-            estatisticas.desarmes(8)
-
+           minhaSlada(["uva","laranja"]);
 
         </script>
 </head>
