--- a/ECMAScript/Unidade05-FunçõeseObjetos.html
+++ b/ECMAScript/Unidade05-FunçõeseObjetos.html
@@ -18,15 +18,28 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.min.js"></script>
         <script type="text/babel">
 
-           function* idCriador(){
-               var i = 0;
-               while(true){
-                   yield i++;
-               }
-           }
+          function* baterNoLiquidificador(ingrediente){
+              for(var i = 0; i< ingrediente.length; i++){
+                  yield ingrediente[i];
+              }
+          }
 
-           var g = idCriador();
+          var ingredientes = baterNoLiquidificador(["leite","Banana","Nescau"])
 
+          var fazerVitamina = setInterval(function (){
+              var vitamina = ingredientes.next();
+
+              if(vitamina.done){
+                  clearInterval(fazerVitamina);
+                  console.log("Acabou, sua vitamina esta pronta");
+
+              }else{
+
+                  console.log("Colocando "+vitamina.value);
+
+              }
+
+          },3000)
 
         </script>
 </head>
